# beeb-kb-ps2

./: .gitignore  README.md
docs/: usb-quad-mouse.md
firmware/: CMakeLists.txt  README.md  beeb-keyboard.c  beeb-keyboard.h  beeb-mouse.c  beeb-mouse.h  beebKeyNext.c  debug.h  pins.h  ps2comm.c  ps2comm.h  ps2keys.c  ps2keys.h
pcb/: Next2BeebKB.kicad_pcb  Next2BeebKB.kicad_prl  Next2BeebKB.kicad_pro  Next2BeebKB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/Local/: D_SOT-23_BAT54.kicad_mod  DossyPS2.bak  DossyPS2.kicad_sym  PS2 mini din 6.kicad_mod  PS2KEYLOGO.kicad_mod  PS2KEYLOGO_K.kicad_mod  SW_SPST_GEN.kicad_mod  owl.kicad_mod
pcb/RP-Pico Libraries/: RPI_Local.kicad_sym
